VaadinUILangTabbedView refactored to allow [horizontal] and [verticla] tabs